spacing fix

--- a/source/assets/stylesheets/scss/_subscribe.scss
+++ b/source/assets/stylesheets/scss/_subscribe.scss
@@ -9,7 +9,7 @@
 }
 
 .subscribe-content {
-  @media (min-width:$screen-tablet) {
+  @media (min-width:$screen-desktop) {
     padding-top: 30px;
   }
 
@@ -28,6 +28,11 @@
   background: #f5f5f5;
   padding: 30px;
   border-radius: 10px;
+
+  @media (max-width:$screen-sm-max) {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 
   .mktoForm input[type=text],
   .mktoForm input[type=url],
